# warships

./: .gitignore  CMakeLists.txt  README.md  warships.sln
.github/files/: architecture-plant-uml.wsd  architecture.mdj
warships/: notepad-database.h  warships.cpp  warships.vcxproj  warships.vcxproj.filters
warships/models/: battlefield.cpp  battlefield.h  console-user-interface.cpp  console-user-interface.h  controller.cpp  controller.h  deck.cpp  deck.h  game.cpp  game.h  i-database.cpp  i-database.h  i-user-inrerface.cpp  i-user-inrerface.h  i-user-interface.cpp  i-user-interface.h  notepad-database.cpp  notepad-database.h  ship.cpp  ship.h
warships/src/: battlefield.cpp  battlefield.h  console-user-interface.cpp  console-user-interface.h  controller.cpp  controller.h  deck.h  game.cpp  game.h  i-database.h  i-user-interface.cpp  i-user-interface.h  notepad-database.cpp  notepad-database.h  ship.cpp  ship.h
